--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,7 @@ ul.portfolio-image li .desc{
   font-family: 'Glyphter';
   font-size: 30px;
   line-height: 20px;
-  color: #ffb0aa;
+  color: #966854;
   margin: 0;
 }
 .head-sm {
@@ -715,7 +715,7 @@ ul.portfolio-image li .desc{
 /*---------- c. experience -----------*/
 .wrap-card {
   position: relative;
-  box-shadow: 0px 0px 0px #ffb0aa;
+  box-shadow: 0px 0px 0px #966854;
   transition: all 0.2s ease 0s;
   -webkit-transform: translateY(0px) translateX(0px);
 }
@@ -726,7 +726,7 @@ ul.portfolio-image li .desc{
   content: " ";
   width: 100%;
   height: 3px;
-  background: #ffb0aa;
+  background: #966854;
   -webkit-transform: scaleX(0);
   transition: all 0.2s ease;
 }
@@ -741,7 +741,7 @@ ul.portfolio-image li .desc{
   -webkit-transform-origin: 100% 0;
 }
 .wrap-card:hover {
-  box-shadow: 20px 20px 0px #ffb0aa;
+  box-shadow: 20px 20px 0px #966854;
   -webkit-transform: translateY(-10px) translateX(-10px);
   transition: all 0.2s ease 0.4s;
 }
@@ -762,7 +762,7 @@ ul.portfolio-image li .desc{
   content: " ";
   width: 3px;
   height: 100%;
-  background: #ffb0aa;
+  background: #966854;
   -webkit-transform: scaleY(0);
   transition: all 0.2s ease 0.2s;
 }
@@ -817,7 +817,7 @@ ul.portfolio-image li .desc{
   font-weight: 700;
 }
 .mask-testimonial{
-  background-color: rgba(47, 47, 47, 0.5);
+  background-color: rgba(30, 30, 30, 0.6);
   height: 100%;
   left: 0;
   position: absolute;
@@ -1236,7 +1236,7 @@ ul.portfolio-image li .desc{
   width: 0px;
   position: relative;
 }
-.skillst .count-bar {background-color: #ffb0aa;}
+.skillst .count-bar {background-color: #966854;}
 .skillst .count-bar span{ font-size: 12px;}
 .skillst .title {
   position: absolute;
